Proyecto3/streamlit_ui/k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diabetes-ui-service
spec:
  selector:
    app: diabetes-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
